appId: ${MAESTRO_APP_ID}
---
- launchApp
- assertVisible: "4VELO"
- tapOn:
    text: "Settings"
    optional: true
- tapOn:
    text: "⚙️"
    optional: true
- assertVisible:
    text: "Immersive pixel theme"
    optional: true
